fixed responsive layout for characterPager

--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -949,55 +949,67 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arzt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-Nm-qvH">
-                                <rect key="frame" x="270" y="253" width="59.5" height="38.5"/>
-                                <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="33"/>
-                                <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pB1-Q3-rOk" userLabel="Description">
-                                <rect key="frame" x="60" y="311.5" width="480" height="80"/>
-                                <string key="text">„Seit er aufgrund einer Masern-Epidemie für vogelfrei erklärt wurde, verschrieb er sich eher unfreiwillig dem Kampf auf Leben und Tod.“</string>
-                                <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="23"/>
-                                <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="circle_bright" translatesAutoresizingMaskIntoConstraints="NO" id="8dU-W5-bcq">
-                                <rect key="frame" x="215" y="63" width="170" height="170"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9mP-VI-twe" userLabel="Info">
+                                <rect key="frame" x="0.0" y="340" width="600" height="260"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Arzt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XEH-Nm-qvH">
+                                        <rect key="frame" x="270" y="20" width="59.5" height="38.5"/>
+                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="33"/>
+                                        <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="pB1-Q3-rOk" userLabel="Description">
+                                        <rect key="frame" x="20" y="78.5" width="560" height="181.5"/>
+                                        <string key="text">„Seit er aufgrund einer Masern-Epidemie für vogelfrei erklärt wurde, verschrieb er sich eher unfreiwillig dem Kampf auf Leben und Tod.“</string>
+                                        <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="23"/>
+                                        <color key="textColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="170" id="2aU-ka-2sV"/>
-                                    <constraint firstAttribute="width" constant="170" id="9jJ-kt-i7h"/>
+                                    <constraint firstItem="XEH-Nm-qvH" firstAttribute="top" secondItem="9mP-VI-twe" secondAttribute="top" constant="20" id="1Tj-bB-uZF"/>
+                                    <constraint firstItem="XEH-Nm-qvH" firstAttribute="centerX" secondItem="9mP-VI-twe" secondAttribute="centerX" id="7eu-KR-Abd"/>
+                                    <constraint firstItem="pB1-Q3-rOk" firstAttribute="width" secondItem="9mP-VI-twe" secondAttribute="width" constant="-40" id="HOv-mx-0fM"/>
+                                    <constraint firstItem="pB1-Q3-rOk" firstAttribute="centerX" secondItem="9mP-VI-twe" secondAttribute="centerX" id="Jpy-jw-mZx"/>
+                                    <constraint firstItem="pB1-Q3-rOk" firstAttribute="top" secondItem="XEH-Nm-qvH" secondAttribute="bottom" constant="20" id="MQj-de-it8"/>
+                                    <constraint firstAttribute="bottom" secondItem="pB1-Q3-rOk" secondAttribute="bottom" id="x2L-5q-FQU"/>
+                                </constraints>
+                            </view>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="circle_bright" translatesAutoresizingMaskIntoConstraints="NO" id="8dU-W5-bcq">
+                                <rect key="frame" x="150" y="40" width="300" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="8dU-W5-bcq" secondAttribute="height" multiplier="1:1" id="v7s-eK-IVz"/>
                                 </constraints>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="character_amerindian" translatesAutoresizingMaskIntoConstraints="NO" id="gfG-wV-iDK">
-                                <rect key="frame" x="215" y="73" width="170" height="160"/>
+                                <rect key="frame" x="150" y="50" width="300" height="290"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="MgS-b3-jHQ">
-                                <rect key="frame" x="390" y="131" width="37" height="34"/>
+                                <rect key="frame" x="455" y="160" width="37" height="60"/>
                             </imageView>
                             <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="arrow_left" translatesAutoresizingMaskIntoConstraints="NO" id="ikR-In-lgU">
-                                <rect key="frame" x="173" y="131.5" width="37" height="34"/>
+                                <rect key="frame" x="108" y="160.5" width="37" height="60"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.42745098040000001" green="0.14117647059999999" blue="0.10980392160000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="8dU-W5-bcq" firstAttribute="top" secondItem="wz3-dw-k5Y" secondAttribute="bottom" constant="43" id="4Bt-3T-ZdB"/>
+                            <constraint firstItem="9mP-VI-twe" firstAttribute="width" secondItem="Vo1-s9-xNN" secondAttribute="width" id="0mp-Zu-H1L"/>
+                            <constraint firstItem="8dU-W5-bcq" firstAttribute="top" secondItem="wz3-dw-k5Y" secondAttribute="bottom" constant="20" id="4Bt-3T-ZdB"/>
                             <constraint firstItem="gfG-wV-iDK" firstAttribute="width" secondItem="8dU-W5-bcq" secondAttribute="width" id="6fM-ln-8Zs"/>
                             <constraint firstItem="gfG-wV-iDK" firstAttribute="centerX" secondItem="8dU-W5-bcq" secondAttribute="centerX" id="8Ke-bA-b86"/>
+                            <constraint firstItem="8dU-W5-bcq" firstAttribute="height" secondItem="Vo1-s9-xNN" secondAttribute="height" multiplier="0.5" id="Dir-09-HhF"/>
                             <constraint firstItem="MgS-b3-jHQ" firstAttribute="height" secondItem="8dU-W5-bcq" secondAttribute="height" multiplier="1/5" id="E6e-yy-6rE"/>
                             <constraint firstItem="MgS-b3-jHQ" firstAttribute="centerY" secondItem="8dU-W5-bcq" secondAttribute="centerY" id="F8d-nI-PO2"/>
                             <constraint firstItem="ikR-In-lgU" firstAttribute="centerY" secondItem="8dU-W5-bcq" secondAttribute="centerY" id="Jtp-kx-Jc2"/>
-                            <constraint firstItem="XEH-Nm-qvH" firstAttribute="top" secondItem="8dU-W5-bcq" secondAttribute="bottom" constant="20" id="OsO-bd-WOO"/>
                             <constraint firstItem="8dU-W5-bcq" firstAttribute="centerX" secondItem="Vo1-s9-xNN" secondAttribute="centerX" id="Tgz-IT-dw4"/>
                             <constraint firstItem="gfG-wV-iDK" firstAttribute="height" secondItem="8dU-W5-bcq" secondAttribute="height" constant="-10" id="ThF-gX-16E"/>
-                            <constraint firstItem="XEH-Nm-qvH" firstAttribute="centerX" secondItem="Vo1-s9-xNN" secondAttribute="centerX" id="Vjf-Xy-TgZ"/>
                             <constraint firstItem="ikR-In-lgU" firstAttribute="height" secondItem="8dU-W5-bcq" secondAttribute="height" multiplier="1/5" id="Wd0-Po-eI4"/>
-                            <constraint firstItem="pB1-Q3-rOk" firstAttribute="top" secondItem="XEH-Nm-qvH" secondAttribute="bottom" constant="20" id="aKz-eB-959"/>
                             <constraint firstItem="ikR-In-lgU" firstAttribute="trailing" secondItem="8dU-W5-bcq" secondAttribute="leading" constant="-5" id="aea-Z1-KqK"/>
-                            <constraint firstItem="pB1-Q3-rOk" firstAttribute="centerX" secondItem="Vo1-s9-xNN" secondAttribute="centerX" id="g7u-6q-u4j"/>
+                            <constraint firstItem="9mP-VI-twe" firstAttribute="height" secondItem="Vo1-s9-xNN" secondAttribute="height" multiplier="0.5" constant="-40" id="dT3-Pa-t8a"/>
+                            <constraint firstItem="9mP-VI-twe" firstAttribute="centerX" secondItem="Vo1-s9-xNN" secondAttribute="centerX" id="dfX-HI-gHP"/>
                             <constraint firstItem="MgS-b3-jHQ" firstAttribute="leading" secondItem="8dU-W5-bcq" secondAttribute="trailing" constant="5" id="gNS-Os-6LQ"/>
                             <constraint firstItem="gfG-wV-iDK" firstAttribute="bottom" secondItem="8dU-W5-bcq" secondAttribute="bottom" id="j0O-lS-XMj"/>
-                            <constraint firstItem="pB1-Q3-rOk" firstAttribute="width" secondItem="Vo1-s9-xNN" secondAttribute="width" multiplier="0.8" id="kHn-Ip-IAb"/>
+                            <constraint firstItem="9mP-VI-twe" firstAttribute="top" secondItem="8dU-W5-bcq" secondAttribute="bottom" id="viC-lW-uRY"/>
                         </constraints>
                     </view>
                     <connections>
