--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
             <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
+            <string>FuturaExtended</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -625,7 +628,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a8g-aw-5mA" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="516"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="716"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NHX-W1-mNH" userLabel="Info">
                                                 <rect key="frame" x="0.0" y="0.0" width="600" height="288"/>
@@ -712,19 +715,114 @@
                                                     <userDefinedRuntimeAttribute type="string" keyPath="Label" value="LAST DUELS"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0kC-MF-vOB" userLabel="Open Duels">
+                                                <rect key="frame" x="0.0" y="496" width="600" height="200"/>
+                                                <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="ss8-UZ-MpJ"/>
+                                                </constraints>
+                                                <prototypes>
+                                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="duelCell" rowHeight="100" id="Kpm-y1-ulh" customClass="DuelItemViewCell" customModule="Peng" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="28" width="600" height="100"/>
+                                                        <autoresizingMask key="autoresizingMask"/>
+                                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Kpm-y1-ulh" id="eaV-yE-6vJ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
+                                                            <autoresizingMask key="autoresizingMask"/>
+                                                            <subviews>
+                                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zId-6f-LhH">
+                                                                    <rect key="frame" x="0.0" y="10" width="600" height="79.5"/>
+                                                                    <subviews>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_bg" translatesAutoresizingMaskIntoConstraints="NO" id="A3Q-oF-rsY">
+                                                                            <rect key="frame" x="20" y="0.0" width="79.5" height="79.5"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="width" secondItem="A3Q-oF-rsY" secondAttribute="height" multiplier="50:50" id="m3g-PH-ico"/>
+                                                                            </constraints>
+                                                                        </imageView>
+                                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character_bandit" translatesAutoresizingMaskIntoConstraints="NO" id="EfJ-LV-LG6">
+                                                                            <rect key="frame" x="-141" y="6" width="400.5" height="73.5"/>
+                                                                        </imageView>
+                                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8TS-rI-SRC" userLabel="info">
+                                                                            <rect key="frame" x="119" y="2" width="460.5" height="67.5"/>
+                                                                            <subviews>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paul Woerner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="eNr-EN-REu" userLabel="nick">
+                                                                                    <rect key="frame" x="0.0" y="0.0" width="460.5" height="18.5"/>
+                                                                                    <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="16"/>
+                                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                    <nil key="highlightedColor"/>
+                                                                                </label>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOUR TURN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="Ceq-KL-SeX" userLabel="status">
+                                                                                    <rect key="frame" x="0.0" y="16" width="460.5" height="36"/>
+                                                                                    <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="31"/>
+                                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                    <nil key="highlightedColor"/>
+                                                                                </label>
+                                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="&quot;I had fun once, it was aweful furfm rufmd asdasd&quot;" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="xzQ-Z2-HdS" userLabel="bet">
+                                                                                    <rect key="frame" x="0.0" y="49" width="460.5" height="17.5"/>
+                                                                                    <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="15"/>
+                                                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                                    <nil key="highlightedColor"/>
+                                                                                </label>
+                                                                            </subviews>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="trailing" secondItem="xzQ-Z2-HdS" secondAttribute="trailing" id="AHs-O6-Azf"/>
+                                                                                <constraint firstItem="eNr-EN-REu" firstAttribute="top" secondItem="8TS-rI-SRC" secondAttribute="top" id="GXc-fg-tDK"/>
+                                                                                <constraint firstItem="Ceq-KL-SeX" firstAttribute="leading" secondItem="eNr-EN-REu" secondAttribute="leading" id="NiA-q0-ibI"/>
+                                                                                <constraint firstItem="xzQ-Z2-HdS" firstAttribute="leading" secondItem="eNr-EN-REu" secondAttribute="leading" id="Tgr-ap-fh2"/>
+                                                                                <constraint firstItem="eNr-EN-REu" firstAttribute="leading" secondItem="8TS-rI-SRC" secondAttribute="leading" id="XdI-gJ-jGT"/>
+                                                                                <constraint firstItem="Ceq-KL-SeX" firstAttribute="centerY" secondItem="8TS-rI-SRC" secondAttribute="centerY" id="eOu-MF-COm"/>
+                                                                                <constraint firstAttribute="trailing" secondItem="eNr-EN-REu" secondAttribute="trailing" id="iNO-96-TNK"/>
+                                                                                <constraint firstAttribute="bottom" secondItem="xzQ-Z2-HdS" secondAttribute="bottom" id="j4q-ql-gOk"/>
+                                                                                <constraint firstItem="Ceq-KL-SeX" firstAttribute="trailing" secondItem="eNr-EN-REu" secondAttribute="trailing" id="x2c-e3-LoE"/>
+                                                                            </constraints>
+                                                                        </view>
+                                                                    </subviews>
+                                                                    <constraints>
+                                                                        <constraint firstItem="A3Q-oF-rsY" firstAttribute="leading" secondItem="zId-6f-LhH" secondAttribute="leading" constant="20" id="2Lx-1G-DRp"/>
+                                                                        <constraint firstAttribute="trailing" secondItem="8TS-rI-SRC" secondAttribute="trailing" constant="20" id="6KL-5B-MKE"/>
+                                                                        <constraint firstAttribute="bottom" secondItem="8TS-rI-SRC" secondAttribute="bottom" constant="10" id="Ce5-ZH-V7m"/>
+                                                                        <constraint firstItem="EfJ-LV-LG6" firstAttribute="centerX" secondItem="A3Q-oF-rsY" secondAttribute="centerX" id="MYH-p3-NYh"/>
+                                                                        <constraint firstItem="8TS-rI-SRC" firstAttribute="top" secondItem="zId-6f-LhH" secondAttribute="top" constant="2" id="UxK-RZ-Ldf"/>
+                                                                        <constraint firstItem="A3Q-oF-rsY" firstAttribute="centerY" secondItem="zId-6f-LhH" secondAttribute="centerY" id="VDD-TX-QLx"/>
+                                                                        <constraint firstItem="A3Q-oF-rsY" firstAttribute="height" secondItem="zId-6f-LhH" secondAttribute="height" id="YzQ-jT-6qA"/>
+                                                                        <constraint firstItem="8TS-rI-SRC" firstAttribute="leading" secondItem="A3Q-oF-rsY" secondAttribute="trailing" constant="20" id="aGE-qx-HMp"/>
+                                                                        <constraint firstItem="EfJ-LV-LG6" firstAttribute="top" secondItem="A3Q-oF-rsY" secondAttribute="top" constant="6" id="vdo-GX-bVf"/>
+                                                                        <constraint firstItem="EfJ-LV-LG6" firstAttribute="bottom" secondItem="A3Q-oF-rsY" secondAttribute="bottom" id="zJ1-OE-F8c"/>
+                                                                    </constraints>
+                                                                </view>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="zId-6f-LhH" firstAttribute="leading" secondItem="eaV-yE-6vJ" secondAttribute="leading" id="4Ff-ux-twi"/>
+                                                                <constraint firstItem="zId-6f-LhH" firstAttribute="top" secondItem="eaV-yE-6vJ" secondAttribute="top" constant="10" id="6PJ-Ex-0V9"/>
+                                                                <constraint firstAttribute="bottom" secondItem="zId-6f-LhH" secondAttribute="bottom" constant="10" id="Llh-I6-YDz"/>
+                                                                <constraint firstAttribute="trailing" secondItem="zId-6f-LhH" secondAttribute="trailing" id="zSX-Mi-M1H"/>
+                                                            </constraints>
+                                                        </tableViewCellContentView>
+                                                        <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <connections>
+                                                            <outlet property="bet" destination="xzQ-Z2-HdS" id="gUS-82-blZ"/>
+                                                            <outlet property="characterImage" destination="EfJ-LV-LG6" id="cbD-9r-GIK"/>
+                                                            <outlet property="nick" destination="eNr-EN-REu" id="tE1-PD-6rD"/>
+                                                            <outlet property="status" destination="Ceq-KL-SeX" id="eGh-iB-SgC"/>
+                                                        </connections>
+                                                    </tableViewCell>
+                                                </prototypes>
+                                            </tableView>
                                         </subviews>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="bMl-rN-dVc" secondAttribute="trailing" id="0Cz-nW-HXE"/>
                                             <constraint firstAttribute="trailing" secondItem="gGl-cq-cnO" secondAttribute="trailing" constant="20" id="72X-dR-BS2"/>
+                                            <constraint firstAttribute="bottom" secondItem="0kC-MF-vOB" secondAttribute="bottom" constant="20" id="7Sb-AX-uJC"/>
                                             <constraint firstItem="bMl-rN-dVc" firstAttribute="top" secondItem="NHX-W1-mNH" secondAttribute="bottom" id="7b0-t9-Z9P"/>
+                                            <constraint firstAttribute="trailing" secondItem="0kC-MF-vOB" secondAttribute="trailing" id="EzX-ZE-e3t"/>
                                             <constraint firstItem="NHX-W1-mNH" firstAttribute="top" secondItem="a8g-aw-5mA" secondAttribute="top" id="J3H-XU-Z69"/>
                                             <constraint firstItem="NHX-W1-mNH" firstAttribute="leading" secondItem="a8g-aw-5mA" secondAttribute="leading" id="YmJ-s2-Bs5"/>
                                             <constraint firstAttribute="trailing" secondItem="DXR-Bq-r56" secondAttribute="trailing" constant="20" id="b2H-Fh-DhX"/>
                                             <constraint firstItem="gGl-cq-cnO" firstAttribute="top" secondItem="DXR-Bq-r56" secondAttribute="bottom" constant="20" id="bTj-0o-scn"/>
                                             <constraint firstItem="gGl-cq-cnO" firstAttribute="leading" secondItem="a8g-aw-5mA" secondAttribute="leading" constant="20" id="erH-iP-bfc"/>
-                                            <constraint firstAttribute="bottom" secondItem="gGl-cq-cnO" secondAttribute="bottom" constant="20" id="jVM-X6-RAa"/>
+                                            <constraint firstItem="0kC-MF-vOB" firstAttribute="leading" secondItem="a8g-aw-5mA" secondAttribute="leading" id="fyT-Na-O4F"/>
                                             <constraint firstItem="bMl-rN-dVc" firstAttribute="leading" secondItem="a8g-aw-5mA" secondAttribute="leading" id="jzM-uN-C13"/>
                                             <constraint firstItem="DXR-Bq-r56" firstAttribute="leading" secondItem="a8g-aw-5mA" secondAttribute="leading" constant="20" id="nEV-SY-Eq0"/>
+                                            <constraint firstItem="0kC-MF-vOB" firstAttribute="top" secondItem="gGl-cq-cnO" secondAttribute="bottom" id="tjO-X1-5J8"/>
                                             <constraint firstItem="DXR-Bq-r56" firstAttribute="top" secondItem="bMl-rN-dVc" secondAttribute="bottom" constant="10" id="vG1-Gc-07K"/>
                                             <constraint firstAttribute="trailing" secondItem="NHX-W1-mNH" secondAttribute="trailing" id="w4f-pU-GsJ"/>
                                         </constraints>
@@ -755,6 +853,8 @@
                         <outlet property="character" destination="c54-8R-UCd" id="LAe-sZ-VIG"/>
                         <outlet property="editProfile" destination="Tif-gl-KWg" id="pAV-gn-bP2"/>
                         <outlet property="editProfileHeight" destination="R9f-VE-VNy" id="XbS-QI-2oh"/>
+                        <outlet property="lastDuelsTableView" destination="0kC-MF-vOB" id="4UU-kq-VKC"/>
+                        <outlet property="lastDuelsTableViewHeight" destination="ss8-UZ-MpJ" id="3TD-Nl-xex"/>
                         <outlet property="nick" destination="0VN-ld-lrc" id="Bef-b3-LyO"/>
                         <outlet property="slogan" destination="N9m-yX-lfz" id="OjN-jv-CnJ"/>
                     </connections>
