--- a/Peng/Base.lproj/Main.storyboard
+++ b/Peng/Base.lproj/Main.storyboard
@@ -571,7 +571,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RoK-bW-biG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-293" y="835"/>
+            <point key="canvasLocation" x="-293" y="971"/>
         </scene>
         <!--HowToViewController-->
         <scene sceneID="NhD-bH-3lg">
@@ -579,7 +579,7 @@
                 <pageViewController storyboardIdentifier="HowToViewController" autoresizesArchivedViewToFullSize="NO" title="HowToViewController" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="QXC-zm-5IP" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Jr-ih-fzr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-293" y="1477"/>
+            <point key="canvasLocation" x="-286" y="1749"/>
         </scene>
         <!--How To Item-->
         <scene sceneID="pba-kO-fl0">
@@ -610,7 +610,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qHu-tk-8X7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-302" y="2171"/>
+            <point key="canvasLocation" x="-286" y="2455"/>
         </scene>
         <!--Profile-->
         <scene sceneID="Cn3-H9-jdl">
@@ -861,7 +861,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lrm-kH-fPn" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="453" y="912"/>
+            <point key="canvasLocation" x="453" y="1392"/>
+        </scene>
+        <!--Duel-->
+        <scene sceneID="PCg-Ae-t3e">
+            <objects>
+                <viewController title="Duel" id="VSy-kN-7gs" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="AeG-qz-4WR"/>
+                        <viewControllerLayoutGuide type="bottom" id="MXc-HX-Om2"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="e5I-8H-w8R">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KhG-Eo-nYZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2132" y="41"/>
         </scene>
         <!--New Duel-->
         <scene sceneID="0vg-nN-xTX">
@@ -1028,19 +1046,19 @@
             <objects>
                 <tableViewController title="Ranking" id="jLw-Lm-yhI" customClass="UsersTableViewController" customModule="Peng" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="9Ql-hm-iIR">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="800"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="0.97647058819999999" blue="0.93333333330000001" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="separatorColor" red="0.20392156859999999" green="0.1960784314" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="414" placeholderIntrinsicHeight="100" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserCell" rowHeight="100" id="b4A-3R-fpP" customClass="UsersTableViewCell" customModule="Peng" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="414" height="100"/>
+                                <rect key="frame" x="0.0" y="92" width="600" height="100"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="b4A-3R-fpP" id="bKZ-cE-Z2L">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IbT-uM-xzw">
+                                        <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IbT-uM-xzw">
                                             <rect key="frame" x="0.0" y="10" width="414" height="80"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="circle_bg" translatesAutoresizingMaskIntoConstraints="NO" id="f85-Lq-xNZ">
@@ -1052,16 +1070,16 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="character_bandit" translatesAutoresizingMaskIntoConstraints="NO" id="bDT-wQ-MYp">
                                                     <rect key="frame" x="-140" y="6" width="400" height="74"/>
                                                 </imageView>
-                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2W7-U2-Spr" userLabel="info">
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2W7-U2-Spr" userLabel="info">
                                                     <rect key="frame" x="120" y="2" width="274" height="68"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paul Woerner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="oQ0-fK-Izm" userLabel="nick">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Paul Woerner" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="oQ0-fK-Izm" userLabel="nick">
                                                             <rect key="frame" x="0.0" y="0.0" width="274" height="18.5"/>
                                                             <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="16"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="290." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPx-Pr-9gH" userLabel="rank">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="290." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TPx-Pr-9gH" userLabel="rank">
                                                             <rect key="frame" x="0.0" y="16" width="274" height="36"/>
                                                             <fontDescription key="fontDescription" name="FuturaExtended" family="FuturaExtended" pointSize="31"/>
                                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1122,7 +1140,6 @@
                             <outlet property="delegate" destination="jLw-Lm-yhI" id="Q4U-RO-CmH"/>
                         </connections>
                     </tableView>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
                     <connections>
                         <segue destination="Ah7-4n-0Wa" kind="show" identifier="showProfile" id="eya-Ju-tvL"/>
                     </connections>
@@ -1413,6 +1430,6 @@
         <image name="logo" width="796" height="796"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="sRR-XK-3gh"/>
+        <segue reference="eya-Ju-tvL"/>
     </inferredMetricsTieBreakers>
 </document>
